<resources>
    <string name="app_name">Today</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="active_task_title">ongoing</string>
    <string name="pomodoro_title" translatable="false">Pomodoro</string>
    <string name="short_break_title">Short Break</string>
    <string name="long_break_title">Long Break</string>
    <string name="greetings">Welcome! Let’s get things done today.</string>
    <string name="active_task" translatable="false">Washing dishes</string>
    <string name="start_btn_title">START</string>
    <string name="reset_btn_title">RESET</string>
    <string name="task_title_input_hint">Task Title</string>
    <string name="task_detail_input_hint">Task Detail</string>
    <string name="add_btn_title">ADD</string>
    <string name="pause_btn_title">PAUSE</string>
</resources>